Removed query filters, config from env